[project]
name = "merge-listed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "json-repair>=0.50.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "polars>=1.33.0",
    "pyarrow>=21.0.0",
    "tqdm>=4.67.1",
    "openai>=1.52.0",
    "zai-sdk>=0.0.3.4",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "python-calamine>=0.5.3",
]
